# bevy_with_rust_gpu_sample

./: .gitignore  Cargo.toml  build.rs  readme.md  rust-toolchain.toml
.github/: dependabot.yml
assets/shaders/: custom_material.wgsl
game/: .gitignore  Cargo.toml  build.rs
game/src/: main.rs
shader_builder/: Cargo.toml
shader_builder/src/: lib.rs
shaders/custom_material/: Cargo.toml
shaders/custom_material/src/: lib.rs
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
