[package]
name = "bevy_with_rust_gpu_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"

[workspace]
resolver = "2" # wgpu/Bevy needs this

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


