[package]
name = "bevy_with_rust_gpu_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11", features=["shader_format_spirv"]}

[build-dependencies]
spirv-builder = "0.8"

[workspace]
resolver = "2" # wgpu/Bevy needs this
members = ["shaders/*"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


